# AIOrganizer

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  dev.cmd  dev.py  pyproject.toml
.codex/: config.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  live-providers.yml  release.yml
docs/: DOCUMENT_REPAIR_DESIGN.md  OCR_SEARCHABLE_PDF_DESIGN.md  PRIVATE_REDACTION_DESIGN.md  PRODUCT_AND_ARCHITECTURE_PLAN.md  naming-policy.md  phase-0-feasibility.md  provider-plugin-contract.md  threat-model.md  user-workflows.md
docs/assets/: README.md
docs/decisions/: 001-pyside-modular-monolith.md  002-workspace-persistence.md  003-categories-prompts.md  004-proposal-only-ai.md  005-filesystem-transactions.md  006-ocr-packaging.md  007-provider-abstraction.md  008-action-predicates.md  009-qt-navigation.md  010-cross-platform-packaging.md  011-cross-volume-quarantine.md  README.md
docs/schemas/: outlook-handoff-v1.schema.json  provider-plugin-v1.schema.json
outlook-addin/: README.md  dev-server.mjs  manifest.xml  package-lock.json  package.json  support.html  taskpane.css  taskpane.html  taskpane.js
packaging/: README.md  build_portable.py  fetch_tessdata.py  merge_macos_universal.py  sign_release.py
packaging/linux/: AIOrganizer.desktop
packaging/macos/: Info.plist
packaging/windows/: AIOrganizer.iss
src/ai_organizer/: __init__.py
src/ai_organizer/adapters/: defender_status.py  software_inventory.py  storage_inventory.py  windows_system.py
src/ai_organizer/application/: email_service.py  export_service.py  ports.py  (+6 more)
tests/integration/: test_inventory.py  test_operations.py  test_synthetic_corpus.py
tests/live/: test_providers.py
tests/property/: test_naming_properties.py
tests/ui/: test_branding.py  test_file_preview.py  test_inventory_scan.py  test_smoke.py  test_table_views.py
tests/unit/: test_actions.py  test_build_portable.py  test_cache.py  test_categories.py  test_cleanup.py  test_codex.py  test_controller_cache.py  test_deepseek_audit.py  test_defender_status.py  test_email.py  test_environment.py  test_hierarchy.py  test_inventory_query.py  test_mcp_registration.py  test_metadata.py  test_moves.py  test_naming.py  test_organization.py  test_pdf_repair.py  test_phase2_contract.py  test_phase7.py  test_prompts.py  test_recurrence.py  test_release_signing.py  test_semantic_store.py  test_storage_inventory.py  test_update_research.py  test_updates_schema.py  test_windows_system.py  test_workspace.py  test_workspace_locator.py
(+59 files in other folders)
